Hometask 4 (#2)
* added authorization for user

* added authorization for user

* added logout for users

* added login/logout

* added user id to ratings

* added delete user route

* user uniq by password
