# src/db/models/User.js
@@ -1,5 +1,7 @@
+/* eslint-disable no-param-reassign */
 const { Model, DataTypes } = require('sequelize');
 const sequelize = require('../sequelize');
+const { getPasswordHashAndSalt } = require('../../utils/getHashPasswordAndSalt');
 
 class User extends Model {}
 
@@ -21,6 +23,43 @@ User.init({
     len: [2, 50],
     trim: true,
   },
-}, { sequelize, modelName: 'User' });
+  salt: {
+    type: DataTypes.STRING,
+  },
+  role: {
+    type: DataTypes.STRING,
+    defaultValue: 'user',
+    allowNull: false,
+  },
+  email: {
+    type: DataTypes.STRING,
+    allowNull: false,
+    validate: { isEmail: true },
+    unique: true,
+  },
+  password: {
+    type: DataTypes.STRING,
+    allowNull: false,
+  },
+}, {
+  sequelize,
+  modelName: 'User',
+  hooks: {
+    beforeCreate: async (user) => {
+      const { passwordHash: password, salt } = await getPasswordHashAndSalt(user.password);
+      user.password = password;
+      user.salt = salt;
+    },
+    beforeBulkCreate: async (users) => {
+      const hashArr = await Promise.all(
+        users.map(((user) => getPasswordHashAndSalt(user.password))),
+      );
+      users.forEach((user, i) => {
+        user.password = hashArr[i].password;
+        user.salt = hashArr[i].salt;
+      });
+    },
+  },
+});
 
 module.exports = User;
